Hotfix whitespaces causing text parsing issue

--- a/src/App.css
+++ b/src/App.css
@@ -95,10 +95,17 @@ h6 {
 .article-word {
     color: orange;
     font-weight: bold;
+    text-decoration: underline solid black;
+    text-decoration-skip-ink: auto;
 }
 
 .article-word:hover {
     color: slateblue
+}
+
+.article-unchanged {
+    text-decoration: underline solid black;
+    text-decoration-skip-ink: auto;
 }
 
 .article-unchanged:hover {
